--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -1,31 +1,41 @@
+
+
 {% extends "layout.html" %}
 
 {% block title %} Signup {% endblock %}
-
 {% block content %}
+
     <div class="container">
         <h1>Sign Up</h1>
         <p>Please fill in this form to create an account.</p>
         <hr>
+        {% if form.errors %}
+            <p><strong>The form contains errors:</strong>
+            <ul>
+                {% for error in form.errors %}
+                    <li>{{ error }}</li>
+                {% endfor %}
+            </ul>
+        {% endif %}
+        <form action="" method="post" novalidate>
+            <p>
+                {{ form.email_address.label(class="bold") }}
+                {{ form.email_address }}
+                {{ form.password.label(class="bold") }}
+                {{ form.password }}
+                {{ form.confirm.label(class="bold") }}
+                {{ form.confirm }}
+            </p>
+            <label>
+                <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
+            </label>
 
-        <p>
-            {{ form.email_address.label(class_="bold") }}
-            {{ form.email_address }}
-            {{ form.password.label(class_="bold") }}
-            {{ form.password }}
-            {{ form.confirm.label(class_="bold") }}
-            {{ form.confirm }}
 
-        </p>
+            <p>
+                <button type="submit" class="signupbtn">Sign Up</button>
+            </p>
+        </form>
 
-        <label>
-            <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
-        </label>
-
-
-        <div class="clearfix">
-            <button type="submit" class="signupbtn">Sign Up</button>
-        </div>
     </div>
 
 
